manifests/apps/litellm/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: litellm
  namespace: litellm
  annotations:
    cert-manager.io/cluster-issuer: mainissuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`llm.savew.dev`) && PathPrefix(`/v1/`)
      priority: 10
      services:
        - kind: Service
          name: litellm
          namespace: litellm
          passHostHeader: true
          port: 4000
          scheme: http
  tls:
    secretName: wildcard-savew.dev-tls
    domains:
      - main: llm.savew.dev
