manifests/apps/litellm/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: litellm
  namespace: litellm
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`llm.savew.dev`) && (PathPrefix(`/v1`) || PathPrefix(`/models`))
      priority: 10
      services:
        - kind: Service
          name: litellm
          namespace: litellm
          passHostHeader: true
          port: 4000
          scheme: http
  tls:
    domains:
      - main: llm.savew.dev
    secretName: wildcard-savew.dev-tls
